# workbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
book/: _config.yml  _toc.yml  intro.md  references.bib
book/_static/: custom.css
book/athena/: Development in Shifter using VSCode.md  Development-in-Shifter-using-VSCode.md  athena_dev_in_perlmutter.md  build_athena_packages.md  build_atlasexternal.md  checkout-athena.md  iaas_for_daod.md  intro.md  tracking-aas-in-athena.md  triton_client.md
book/foundation_universe/: history_of_commands.md  intro.md  nyx.md
book/llm/: agents.md  intro.md  transformers.ipynb
book/nersc/: intro.md  newusers.md
book/other/: gnn4itk.md  intro.md  ml_conf.md
book/programming/: git.md  intro.md
