[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "workbook"
version = "0.1.0.dev0"
description = "A random workbook."
readme = "README.md"
requires-python = "<3.14,>=3.11"
license = {file = "LICENSE"}
keywords = ["workbook", "jupyterbook", "playground"]
authors = [
  {name = "X. Ju", email = "xju@lbl.gov" }
]
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "sphinx-last-updated-by-git (>=0.3.8,<0.4.0)",
    "transformers[torch] (>=4.56.1,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]

[project.urls]
Homepage = "https://github.com/xju2/workbook/tree/main"
